Implemented state management and refactored types

--- a/src/server/template.html
+++ b/src/server/template.html
@@ -11,7 +11,7 @@
     <script src="/components.js"></script>
     <script src="/renderer.js"></script>
     <script>
-        Renderer.renderNodeToDOM(JSON.parse('<fleksiNode>'));
+        Renderer.renderNodeToDOM(JSON.parse('<thing-app>'));
     </script>
 </body>
 
