Finally fixed server build process...

--- a/src/server/template.html
+++ b/src/server/template.html
@@ -7,12 +7,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
-    <script src="/components.js"></script>
-    <script src="/renderer.js"></script>
-    <script>
-        Renderer.renderNodeToDOM(JSON.parse('<thing-app>'));
-    </script>
+    <div id="root"><thing-app></div>
 </body>
 
 </html>
