build configs for server and client

--- a/src/server/template.html
+++ b/src/server/template.html
@@ -8,6 +8,8 @@
 
 <body>
     <div id="root"><thing-app></div>
+    <script>var thingAppContext=JSON.parse('<context>')</script>
+    <script src="renderer.js"/>
 </body>
 
 </html>
