Added source mapping, fixed more bugs

--- a/src/server/template.html
+++ b/src/server/template.html
@@ -9,7 +9,7 @@
 <body>
     <div id="root"><thing-app></div>
     <script>var thingAppContext=JSON.parse('<context>')</script>
-    <script src="renderer.js"></script>
+    <script src="/renderer.js"></script>
 </body>
 
 </html>
