Added collapsibility for json editor

--- a/src/server/template.html
+++ b/src/server/template.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Fleksi</title>
     <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
